--- a/android/AndroidManifest.xml
+++ b/android/AndroidManifest.xml
@@ -4,8 +4,6 @@
     android:versionCode="1"
     android:versionName="1.0" >
 
-    <uses-sdk android:minSdkVersion="8" android:targetSdkVersion="24" />
-
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
@@ -13,9 +11,9 @@
         android:theme="@style/GdxTheme" >
         <activity
             android:name="com.thefoxarmy.rainbowwarrior.AndroidLauncher"
-            android:label="@string/app_name" 
-            android:screenOrientation="landscape"
-            android:configChanges="keyboard|keyboardHidden|orientation|screenSize">
+            android:configChanges="keyboard|keyboardHidden|orientation|screenSize"
+            android:label="@string/app_name"
+            android:screenOrientation="landscape">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
