--- a/build.gradle
+++ b/build.gradle
@@ -6,9 +6,9 @@ buildscript {
         jcenter()
     }
     dependencies {
+        classpath 'de.richsource.gradle.plugins:gwt-gradle-plugin:0.6'
         classpath 'com.android.tools.build:gradle:2.1.3'
         classpath 'com.mobidevelop.robovm:robovm-gradle-plugin:2.2.0'
-        classpath 'org.multi-os-engine:moe-gradle:1.2.0'
     }
 }
 
@@ -43,12 +43,12 @@ project(":desktop") {
         compile "com.badlogicgames.gdx:gdx-backend-lwjgl:$gdxVersion"
         compile "com.badlogicgames.gdx:gdx-platform:$gdxVersion:natives-desktop"
         compile "com.badlogicgames.gdx:gdx-box2d-platform:$gdxVersion:natives-desktop"
-        compile "com.badlogicgames.gdx:gdx-freetype-platform:$gdxVersion:natives-desktop"
-        compile "com.badlogicgames.gdx:gdx-tools:$gdxVersion"
         compile "com.badlogicgames.gdx:gdx-controllers-desktop:$gdxVersion"
         compile "com.badlogicgames.gdx:gdx-controllers-platform:$gdxVersion:natives-desktop"
-        compile "de.tomgrill.gdxdialogs:gdx-dialogs-desktop:1.1.0"
+        compile "com.badlogicgames.gdx:gdx-tools:$gdxVersion"
+        compile "com.badlogicgames.gdx:gdx-freetype-platform:$gdxVersion:natives-desktop"
         compile "de.tomgrill.gdxfacebook:gdx-facebook-desktop:1.2.2"
+        compile "de.tomgrill.gdxdialogs:gdx-dialogs-desktop:1.1.0"
     }
 }
 
@@ -71,19 +71,19 @@ project(":android") {
         natives "com.badlogicgames.gdx:gdx-box2d-platform:$gdxVersion:natives-arm64-v8a"
         natives "com.badlogicgames.gdx:gdx-box2d-platform:$gdxVersion:natives-x86"
         natives "com.badlogicgames.gdx:gdx-box2d-platform:$gdxVersion:natives-x86_64"
+        compile "com.badlogicgames.gdx:gdx-controllers:$gdxVersion"
+        compile "com.badlogicgames.gdx:gdx-controllers-android:$gdxVersion"
+        compile "com.badlogicgames.gdx:gdx-ai:$aiVersion"
         compile "com.badlogicgames.gdx:gdx-freetype:$gdxVersion"
         natives "com.badlogicgames.gdx:gdx-freetype-platform:$gdxVersion:natives-armeabi"
         natives "com.badlogicgames.gdx:gdx-freetype-platform:$gdxVersion:natives-armeabi-v7a"
         natives "com.badlogicgames.gdx:gdx-freetype-platform:$gdxVersion:natives-arm64-v8a"
         natives "com.badlogicgames.gdx:gdx-freetype-platform:$gdxVersion:natives-x86"
         natives "com.badlogicgames.gdx:gdx-freetype-platform:$gdxVersion:natives-x86_64"
-        compile "com.badlogicgames.gdx:gdx-controllers:$gdxVersion"
-        compile "com.badlogicgames.gdx:gdx-controllers-android:$gdxVersion"
-        compile "com.badlogicgames.gdx:gdx-ai:$aiVersion"
         compile "com.badlogicgames.ashley:ashley:$ashleyVersion"
         compile "com.badlogicgames.box2dlights:box2dlights:$box2DLightsVersion"
-        compile "de.tomgrill.gdxdialogs:gdx-dialogs-android:1.1.0"
         compile "de.tomgrill.gdxfacebook:gdx-facebook-android:1.2.2"
+        compile "de.tomgrill.gdxdialogs:gdx-dialogs-android:1.1.0"
     }
 }
 
@@ -100,8 +100,35 @@ project(":ios") {
         compile "com.badlogicgames.gdx:gdx-platform:$gdxVersion:natives-ios"
         compile "com.badlogicgames.gdx:gdx-box2d-platform:$gdxVersion:natives-ios"
         compile "com.badlogicgames.gdx:gdx-freetype-platform:$gdxVersion:natives-ios"
-        compile "de.tomgrill.gdxdialogs:gdx-dialogs-ios:1.1.0"
         compile "de.tomgrill.gdxfacebook:gdx-facebook-ios:1.2.2"
+        compile "de.tomgrill.gdxdialogs:gdx-dialogs-ios:1.1.0"
+    }
+}
+
+project(":html") {
+    apply plugin: "gwt"
+    apply plugin: "war"
+
+
+    dependencies {
+        compile project(":core")
+        compile "com.badlogicgames.gdx:gdx-backend-gwt:$gdxVersion"
+        compile "com.badlogicgames.gdx:gdx:$gdxVersion:sources"
+        compile "com.badlogicgames.gdx:gdx-backend-gwt:$gdxVersion:sources"
+        compile "com.badlogicgames.gdx:gdx-box2d:$gdxVersion:sources"
+        compile "com.badlogicgames.gdx:gdx-box2d-gwt:$gdxVersion:sources"
+        compile "com.badlogicgames.gdx:gdx-controllers:$gdxVersion:sources"
+        compile "com.badlogicgames.gdx:gdx-controllers-gwt:$gdxVersion"
+        compile "com.badlogicgames.gdx:gdx-controllers-gwt:$gdxVersion:sources"
+        compile "com.badlogicgames.gdx:gdx-ai:$aiVersion:sources"
+        compile "com.badlogicgames.ashley:ashley:$ashleyVersion:sources"
+        compile "com.badlogicgames.box2dlights:box2dlights:$box2DLightsVersion:sources"
+        compile "net.dermetfan.libgdx-utils:libgdx-utils:0.13.3:sources"
+        compile "net.dermetfan.libgdx-utils:libgdx-utils:0.13.3:sources"
+        compile "net.dermetfan.libgdx-utils:libgdx-utils-box2d:0.13.3:sources"
+        compile "de.tomgrill.gdxfacebook:gdx-facebook-core:1.2.2:sources"
+        compile "de.tomgrill.gdxfacebook:gdx-facebook-html:1.2.2:sources"
+        compile "com.github.czyzby:gdx-kiwi:1.8.1.9.4:sources"
     }
 }
 
@@ -112,36 +139,17 @@ project(":core") {
     dependencies {
         compile "com.badlogicgames.gdx:gdx:$gdxVersion"
         compile "com.badlogicgames.gdx:gdx-box2d:$gdxVersion"
-        compile "com.badlogicgames.gdx:gdx-freetype:$gdxVersion"
         compile "com.badlogicgames.gdx:gdx-controllers:$gdxVersion"
         compile "com.badlogicgames.gdx:gdx-ai:$aiVersion"
+        compile "com.badlogicgames.gdx:gdx-freetype:$gdxVersion"
         compile "com.badlogicgames.ashley:ashley:$ashleyVersion"
         compile "com.badlogicgames.box2dlights:box2dlights:$box2DLightsVersion"
         compile "com.underwaterapps.overlap2druntime:overlap2d-runtime-libgdx:0.1.0"
-        compile "com.kotcrab.vis:vis-ui:1.1.1"
-        compile "de.tomgrill.gdxdialogs:gdx-dialogs-core:1.1.0"
-        compile "net.dermetfan.libgdx-utils:libgdx-utils-box2d:0.13.3"
         compile "net.dermetfan.libgdx-utils:libgdx-utils:0.13.3"
-        compile "com.github.czyzby:gdx-lml:1.8.1.9.4"
-        compile "com.kotcrab.vis:vis-runtime:0.3.2"
-        compile "com.github.czyzby:gdx-lml-vis:1.8.1.9.4"
-        compile "com.github.czyzby:gdx-kiwi:1.8.1.9.4"
+        compile "net.dermetfan.libgdx-utils:libgdx-utils-box2d:0.13.3"
         compile "de.tomgrill.gdxfacebook:gdx-facebook-core:1.2.2"
-    }
-}
-
-project(":ios-moe") {
-    apply plugin: "moe"
-
-    configurations { natives }
-
-    dependencies {
-        compile project(":core")
-        compile "com.badlogicgames.gdx:gdx-backend-moe:$gdxVersion"
-        natives "com.badlogicgames.gdx:gdx-platform:$gdxVersion:natives-ios"
-        natives "com.badlogicgames.gdx:gdx-box2d-platform:$gdxVersion:natives-ios"
-        natives "com.badlogicgames.gdx:gdx-freetype-platform:$gdxVersion:natives-ios"
-        compile "de.tomgrill.gdxdialogs:gdx-dialogs-ios-moe:1.1.0"
+        compile "de.tomgrill.gdxdialogs:gdx-dialogs-core:1.1.0"
+        compile "com.github.czyzby:gdx-kiwi:1.8.1.9.4"
     }
 }
 
