--- a/local.properties
+++ b/local.properties
@@ -7,5 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Thu Nov 24 14:08:47 CST 2016
-sdk.dir=C\:\\Users\\seth\\AppData\\Local\\Android\\Sdk
+#Fri Nov 25 22:33:15 CST 2016
+sdk.dir=C\:\\Users\\aidan\\AppData\\Local\\Android\\Sdk
