--- a/local.properties
+++ b/local.properties
@@ -7,5 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Fri Nov 25 23:38:53 CST 2016
-sdk.dir=C\:\\Users\\seth\\AppData\\Local\\Android\\Sdk
+#Sat Nov 26 00:23:11 CST 2016
+sdk.dir=C\:\\Users\\aidan\\AppData\\Local\\Android\\Sdk
