Implement Assets Manager. Also fixed the .gitignore again.

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
-/.gradle/
-/.idea/
-/build/
-/android/build/
-/core/build/
-/desktop/build/
+.gradle
+.idea
+build/
+android/build/
+core/build/
+desktop/build/
 .idea/workspace.xml
