This should fix the.gitignore.

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,11 @@
+*.iml
 .gradle
-.idea
-build/
-android/build/
-core/build/
-desktop/build/
-.idea/workspace.xml
-Prismatica.iml
-RainbowWarrior.iml
+/local.properties
+/.idea/workspace.xml
+/.idea/libraries
+/build
+/android/build
+/core/build
+/desktop/build
+/captures
+.externalNativeBuild
