--- a/ios/robovm.properties
+++ b/ios/robovm.properties
@@ -1,6 +1,6 @@
 app.version=1.0
-app.id=com.thefoxarmy.rainbowwarrior
-app.mainclass=com.thefoxarmy.rainbowwarrior.IOSLauncher
+app.id=com.foxyvertex.colorconquest
+app.mainclass=com.foxyvertex.colorconquest.IOSLauncher
 app.executable=IOSLauncher
 app.build=1
 app.name=RainbowWarrior
