--- a/ios/robovm.properties
+++ b/ios/robovm.properties
@@ -1,6 +1,6 @@
-app.version=1.0
+app.version=0.0.1-SNAPSHOT
 app.id=com.foxyvertex.colorconquest
-app.mainclass=com.foxyvertex.colorconquest.IOSLauncher
+app.mainclass=com.foxyvertex.colorconquest.ios.IOSLauncher
 app.executable=IOSLauncher
 app.build=1
-app.name=Color Conquest
+app.name=ColorConquest
