--- a/android/AndroidManifest.xml
+++ b/android/AndroidManifest.xml
@@ -3,17 +3,15 @@
     package="com.foxyvertex.colorconquest"
     android:versionCode="1"
     android:versionName="1.0" >
-
-    <uses-sdk android:minSdkVersion="8" android:targetSdkVersion="25" />
-
+    <uses-sdk android:minSdkVersion="8" android:targetSdkVersion="21" />
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/GdxTheme" >
         <activity
-            android:name="com.foxyvertex.colorconquest.AndroidLauncher"
-            android:label="@string/app_name" 
+            android:name="com.foxyvertex.colorconquest.android.AndroidLauncher"
+            android:label="@string/app_name"
             android:screenOrientation="landscape"
             android:configChanges="keyboard|keyboardHidden|orientation|screenSize">
             <intent-filter>
@@ -22,5 +20,5 @@
             </intent-filter>
         </activity>
     </application>
-
+    <uses-permission android:name="android.permission.INTERNET" />
 </manifest>
