--- a/build.gradle
+++ b/build.gradle
@@ -24,6 +24,7 @@ allprojects {
         box2DLightsVersion = '1.4'
         ashleyVersion = '1.7.0'
         aiVersion = '1.8.0'
+        visuiVersion = '1.3.0'
     }
 
     repositories {
@@ -123,6 +124,7 @@ project(":html") {
         compile "com.badlogicgames.gdx:gdx-ai:$aiVersion:sources"
         compile "com.badlogicgames.ashley:ashley:$ashleyVersion:sources"
         compile "com.badlogicgames.box2dlights:box2dlights:$box2DLightsVersion:sources"
+        compile "com.kotcrab.vis:vis-ui:$visuiVersion:sources"
         compile "net.dermetfan.libgdx-utils:libgdx-utils:0.13.3:sources"
         compile "net.dermetfan.libgdx-utils:libgdx-utils:0.13.3:sources"
         compile "net.dermetfan.libgdx-utils:libgdx-utils-box2d:0.13.3:sources"
@@ -144,6 +146,7 @@ project(":core") {
         compile "com.badlogicgames.gdx:gdx-freetype:$gdxVersion"
         compile "com.badlogicgames.ashley:ashley:$ashleyVersion"
         compile "com.badlogicgames.box2dlights:box2dlights:$box2DLightsVersion"
+        compile "com.kotcrab.vis:vis-ui:$visuiVersion"
         compile "com.underwaterapps.overlap2druntime:overlap2d-runtime-libgdx:0.1.0"
         compile "net.dermetfan.libgdx-utils:libgdx-utils:0.13.3"
         compile "net.dermetfan.libgdx-utils:libgdx-utils-box2d:0.13.3"
